Fixed overflow-x on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,11 @@ html {
 
 body {
     font-family: "Open Sans", sans-serif;
+}
+
+.wrapper {
     overflow-x: hidden;
+    position: relative;
 }
 
 ul {
